finalizando estudo de iframes

--- a/exercícios/024/iframe3.html
+++ b/exercícios/024/iframe3.html
@@ -22,7 +22,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit consequatur soluta, iusto nobis accusantium velit? Porro, id perspiciatis. Consectetur natus suscipit odio cum perferendis ad nostrum esse optio deleniti fugit?</p>
 
     <ul>
-        <li><a href="pag1.html" target="frame">Primeira página</a></li>
+        <li><a href="paginas-extras/pag1.html" target="frame">Primeira página</a></li>
         <li><a href="iframe1.html" target="frame">Segunda página</a></li>
         <li><a href="iframe2.html" target="frame">Terceira página</a></li>
     </ul>
