--- a/exercícios/028/grid1/index.html
+++ b/exercícios/028/grid1/index.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Layout</title>
     <style>
+
         div.container {
             border: 3px solid blue;
             height: 250px;
 
             display: grid;
-            grid-template-columns: auto auto;
-            grid-template-rows: 50px 50px 50px 50px;
-            grid-gap: 2px;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto auto auto;
+            gap: 5px; /* grid-gap virou gap */
+            align-items: normal;
+            justify-items: normal;
+            align-content: normal;
+            justify-content: normal;
         }
 
         div.item {
             border: 3px solid red;
             padding: 5px;
         }
+
     </style>
 </head>
 <body>
@@ -30,6 +36,7 @@
         <div class="item">E</div>
         <div class="item">F</div>
         <div class="item">G</div>
+        <div class="item">H</div>
     </div>
 </body>
 </html>
